feat: add validation
