# app/flow/dto_gen.go
@@ -1,60 +1,0 @@
-// Code generated by github.com/jmattheis/goverter, DO NOT EDIT.
-//go:build !goverter
-
-package flow
-
-type ConverterImpl struct{}
-
-func (c *ConverterImpl) ConvertCreateFlow(source PostFlowJSONRequestBody) CreateFlow {
-	var flowCreateFlow CreateFlow
-	flowCreateFlow.Title = source.Title
-	flowCreateFlow.Nodes = source.Nodes
-	flowCreateFlow.Edges = source.Edges
-	return flowCreateFlow
-}
-func (c *ConverterImpl) ConvertFlowDetail(source FlowDetail) GetFlowIdJSONBody {
-	var flowGetFlowIdJSONBody GetFlowIdJSONBody
-	flowGetFlowIdJSONBody.CreatedAt = TimeToString(source.CreatedAt)
-	flowGetFlowIdJSONBody.Edges = source.Edges
-	flowGetFlowIdJSONBody.Id = source.Id
-	flowGetFlowIdJSONBody.Nodes = source.Nodes
-	flowGetFlowIdJSONBody.Title = source.Title
-	return flowGetFlowIdJSONBody
-}
-func (c *ConverterImpl) ConvertListFlow(source []FlowListItem) []struct {
-	CreatedAt string `json:"created_at"`
-	Id        int    `json:"id"`
-	Title     string `json:"title"`
-} {
-	var unnamedList []struct {
-		CreatedAt string `json:"created_at"`
-		Id        int    `json:"id"`
-		Title     string `json:"title"`
-	}
-	if source != nil {
-		unnamedList = make([]struct {
-			CreatedAt string `json:"created_at"`
-			Id        int    `json:"id"`
-			Title     string `json:"title"`
-		}, len(source))
-		for i := 0; i < len(source); i++ {
-			unnamedList[i] = c.flowFlowListItemToUnnamed(source[i])
-		}
-	}
-	return unnamedList
-}
-func (c *ConverterImpl) flowFlowListItemToUnnamed(source FlowListItem) struct {
-	CreatedAt string `json:"created_at"`
-	Id        int    `json:"id"`
-	Title     string `json:"title"`
-} {
-	var unnamed struct {
-		CreatedAt string `json:"created_at"`
-		Id        int    `json:"id"`
-		Title     string `json:"title"`
-	}
-	unnamed.CreatedAt = TimeToString(source.CreatedAt)
-	unnamed.Id = source.Id
-	unnamed.Title = source.Title
-	return unnamed
-}
